<resources>
    <string name="app_name">Task Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="shr_button_next">create</string>
    <string name="shr_button_cancel">Exit</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="title">Title</string>
    <string name="descriptions">Descriptions</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="add_task">Add Task</string>
    <string name="share_task">Title : %1$s,
              Description : %2$s,
              Date : %3$s,
              Time : %4$s.
    </string>
    <string name="username">Username :</string>
    <string name="majid">Majid</string>
    <string name="password">Password  :</string>
    <string name="textview">TextView</string>
    <string name="join_date">Join date    :</string>
</resources>